--- a/usporedba/usporedba.ipynb
+++ b/usporedba/usporedba.ipynb
@@ -21,16 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Aparat za kavu' 'Perilica rublja' 'Uticnice' 'Napa' 'Mikrovalna'\n",
-      " 'Rasvjeta' 'Podno grijanje' 'Rolete' 'Drobilica' 'Elektricni bojler'\n",
-      " 'Å\\xa0tednjak' 'Frizider' 'Pecnica' 'Klima' 'Perilica posuda'\n",
-      " 'Susilica rublja' 'Led rasvjeta' 'Uticnica']\n"
+      "Index(['id', 'time', 'energy', 'total_active_power',\n",
+      "       'demand_total_active_power', 'maximum_demand_total_active_power', 'i1',\n",
+      "       'i2', 'i3', 'u12', 'u23', 'u13', 'v1', 'v2', 'v3', 'device',\n",
+      "       'total_power_factor', 'total_apparent_power'],\n",
+      "      dtype='object')\n"
      ]
     }
    ],
@@ -38,13 +39,15 @@
     "df = pd.read_csv(r'postgres_public_measurements_dev.csv', parse_dates=['time'], encoding='latin1')\n",
     "#odredivanje svih uredaja\n",
     "devices = df['device'].unique()\n",
-    "print(devices)"
+    "columns = df.columns\n",
+    "\n",
+    "print(columns)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-12T20:03:27.109588Z",
-     "start_time": "2024-03-12T20:03:26.934517100Z"
+     "end_time": "2024-03-12T20:12:34.803670200Z",
+     "start_time": "2024-03-12T20:12:34.741186100Z"
     }
    },
    "id": "c78dc073c84afa7d"
@@ -476,6 +479,105 @@
     }
    },
    "id": "158eb59606f0aa30"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [],
+   "source": [
+    "del df, df2, df_donji, merged_donji, merged_gornji, df2_donji, df2_gornji, df_gornji, merged"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-12T20:33:26.184120800Z",
+     "start_time": "2024-03-12T20:33:26.184120800Z"
+    }
+   },
+   "id": "bafca8d01ebd41b8"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "outputs": [],
+   "source": [
+    "#za svaki merged file, za svako vrijeme pogledat razlike u istoimenim kolonama\n",
+    "#prvo trebam imena kolona, to mogu od gore, columns\n",
+    "for device in devices:\n",
+    "    #columns=columns.drop(['device'])\n",
+    "    df = pd.read_csv(r'merged/{}_merged.csv'.format(device), parse_dates=['time_dev', 'time_prod'], encoding='latin1')\n",
+    "    \n",
+    "    lst = []\n",
+    "    for i, row in df.iterrows():\n",
+    "        for column in columns:\n",
+    "            new_row = False\n",
+    "            value1 = row['{}_dev'.format(column)]\n",
+    "            value2 = row['{}_prod'.format(column)]\n",
+    "            if(not pd.isna(value1) or not pd.isna(value2)):\n",
+    "                #ako je bar jedna od vrijednosti razlicita od null\n",
+    "                if pd.isna(value1) or pd.isna(value2):\n",
+    "                    #ako je neka od njih nan automatski znaci da druga nije pa se moze odmah upisat\n",
+    "                    new_row=True\n",
+    "                elif column == 'demand_total_active_power' or column == 'v1' :\n",
+    "                    #ako value1 nije null i ako je zaokruzena razlicita od 6\n",
+    "                    if round(value1,6)!=value2:\n",
+    "                        new_row=True\n",
+    "                elif column == 'i1':\n",
+    "                    if value1!=round(value2,2):\n",
+    "                        new_row = True\n",
+    "                elif column == 'energy':\n",
+    "                    if value1!=round(value2):\n",
+    "                        new_row =True\n",
+    "                elif column == 'total_power_factor':\n",
+    "                    if round(value1,2)!=value2:\n",
+    "                        new_row = True\n",
+    "                else:\n",
+    "                    if row['{}_dev'.format(column)]!=row['{}_prod'.format(column)]:\n",
+    "                        new_row = True\n",
+    "                \n",
+    "            if new_row:\n",
+    "                #podatak nije isti, upisujem ga u novu tablicu\n",
+    "                diff = abs(value1-value2)\n",
+    "                lst.append({'time_dev':row['time_dev'], 'time_prod':row['time_prod'], 'value_dev':row['{}_dev'.format(column)], 'value_prod':row['{}_prod'.format(column)], 'diff':diff})\n",
+    "                \n",
+    "    final = pd.DataFrame(lst, columns=['time_dev', 'time_prod', 'value_dev', 'value_prod', 'diff'])     \n",
+    "    final.to_csv('final/{}_diff.csv'.format(device), index=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-12T22:15:51.783668900Z",
+     "start_time": "2024-03-12T22:15:48.968206700Z"
+    }
+   },
+   "id": "62077d20ee40c82a"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "     demand_total_active_power_dev  demand_total_active_power_prod  \\\n0                              NaN                             NaN   \n1                              NaN                             NaN   \n2                              NaN                             NaN   \n3                              NaN                             NaN   \n4                              NaN                             NaN   \n..                             ...                             ...   \n295                      72.616669                       72.616669   \n296                      72.616669                             NaN   \n297                      72.616669                       72.616669   \n298                      72.616669                       72.616669   \n299                      72.616669                       72.616669   \n\n       device_dev   device_prod  energy_dev  energy_prod  i1_dev  i1_prod  \\\n0    Led rasvjeta  Led rasvjeta      394824     394824.0    0.33     0.33   \n1    Led rasvjeta  Led rasvjeta      394824     394824.0    0.33     0.33   \n2    Led rasvjeta  Led rasvjeta      394824     394824.0    0.33     0.33   \n3    Led rasvjeta  Led rasvjeta      394824     394824.0    0.33     0.33   \n4    Led rasvjeta  Led rasvjeta      394824     394824.0    0.33     0.33   \n..            ...           ...         ...          ...     ...      ...   \n295  Led rasvjeta  Led rasvjeta      394836     394836.0    0.34     0.34   \n296  Led rasvjeta           NaN      394836          NaN    0.34      NaN   \n297  Led rasvjeta  Led rasvjeta      394836     394836.0    0.34     0.34   \n298  Led rasvjeta  Led rasvjeta      394836     394836.0    0.34     0.34   \n299  Led rasvjeta  Led rasvjeta      394836     394836.0    0.34     0.35   \n\n     i2_dev  i2_prod  ...  u13_dev  u13_prod  u23_dev  u23_prod      v1_dev  \\\n0       NaN      NaN  ...      NaN       NaN      NaN       NaN  231.500000   \n1       NaN      NaN  ...      NaN       NaN      NaN       NaN  231.500000   \n2       NaN      NaN  ...      NaN       NaN      NaN       NaN  231.500000   \n3       NaN      NaN  ...      NaN       NaN      NaN       NaN  231.500000   \n4       NaN      NaN  ...      NaN       NaN      NaN       NaN  231.500000   \n..      ...      ...  ...      ...       ...      ...       ...         ...   \n295     NaN      NaN  ...      NaN       NaN      NaN       NaN  231.199997   \n296     NaN      NaN  ...      NaN       NaN      NaN       NaN  231.199997   \n297     NaN      NaN  ...      NaN       NaN      NaN       NaN  231.100006   \n298     NaN      NaN  ...      NaN       NaN      NaN       NaN  231.100006   \n299     NaN      NaN  ...      NaN       NaN      NaN       NaN  231.100006   \n\n        v1_prod  v2_dev  v2_prod  v3_dev  v3_prod  \n0    231.500000     NaN      NaN     NaN      NaN  \n1    231.500000     NaN      NaN     NaN      NaN  \n2    231.500000     NaN      NaN     NaN      NaN  \n3    231.500000     NaN      NaN     NaN      NaN  \n4    231.600006     NaN      NaN     NaN      NaN  \n..          ...     ...      ...     ...      ...  \n295  231.199997     NaN      NaN     NaN      NaN  \n296         NaN     NaN      NaN     NaN      NaN  \n297  231.100006     NaN      NaN     NaN      NaN  \n298  231.100006     NaN      NaN     NaN      NaN  \n299  231.500000     NaN      NaN     NaN      NaN  \n\n[300 rows x 34 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>demand_total_active_power_dev</th>\n      <th>demand_total_active_power_prod</th>\n      <th>device_dev</th>\n      <th>device_prod</th>\n      <th>energy_dev</th>\n      <th>energy_prod</th>\n      <th>i1_dev</th>\n      <th>i1_prod</th>\n      <th>i2_dev</th>\n      <th>i2_prod</th>\n      <th>...</th>\n      <th>u13_dev</th>\n      <th>u13_prod</th>\n      <th>u23_dev</th>\n      <th>u23_prod</th>\n      <th>v1_dev</th>\n      <th>v1_prod</th>\n      <th>v2_dev</th>\n      <th>v2_prod</th>\n      <th>v3_dev</th>\n      <th>v3_prod</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Led rasvjeta</td>\n      <td>Led rasvjeta</td>\n      <td>394824</td>\n      <td>394824.0</td>\n      <td>0.33</td>\n      <td>0.33</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>231.500000</td>\n      <td>231.500000</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Led rasvjeta</td>\n      <td>Led rasvjeta</td>\n      <td>394824</td>\n      <td>394824.0</td>\n      <td>0.33</td>\n      <td>0.33</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>231.500000</td>\n      <td>231.500000</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Led rasvjeta</td>\n      <td>Led rasvjeta</td>\n      <td>394824</td>\n      <td>394824.0</td>\n      <td>0.33</td>\n      <td>0.33</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>231.500000</td>\n      <td>231.500000</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Led rasvjeta</td>\n      <td>Led rasvjeta</td>\n      <td>394824</td>\n      <td>394824.0</td>\n      <td>0.33</td>\n      <td>0.33</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>231.500000</td>\n      <td>231.500000</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Led rasvjeta</td>\n      <td>Led rasvjeta</td>\n      <td>394824</td>\n      <td>394824.0</td>\n      <td>0.33</td>\n      <td>0.33</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>231.500000</td>\n      <td>231.600006</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>295</th>\n      <td>72.616669</td>\n      <td>72.616669</td>\n      <td>Led rasvjeta</td>\n      <td>Led rasvjeta</td>\n      <td>394836</td>\n      <td>394836.0</td>\n      <td>0.34</td>\n      <td>0.34</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>231.199997</td>\n      <td>231.199997</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>296</th>\n      <td>72.616669</td>\n      <td>NaN</td>\n      <td>Led rasvjeta</td>\n      <td>NaN</td>\n      <td>394836</td>\n      <td>NaN</td>\n      <td>0.34</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>231.199997</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>297</th>\n      <td>72.616669</td>\n      <td>72.616669</td>\n      <td>Led rasvjeta</td>\n      <td>Led rasvjeta</td>\n      <td>394836</td>\n      <td>394836.0</td>\n      <td>0.34</td>\n      <td>0.34</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>231.100006</td>\n      <td>231.100006</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>298</th>\n      <td>72.616669</td>\n      <td>72.616669</td>\n      <td>Led rasvjeta</td>\n      <td>Led rasvjeta</td>\n      <td>394836</td>\n      <td>394836.0</td>\n      <td>0.34</td>\n      <td>0.34</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>231.100006</td>\n      <td>231.100006</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>299</th>\n      <td>72.616669</td>\n      <td>72.616669</td>\n      <td>Led rasvjeta</td>\n      <td>Led rasvjeta</td>\n      <td>394836</td>\n      <td>394836.0</td>\n      <td>0.34</td>\n      <td>0.35</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>231.100006</td>\n      <td>231.500000</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>300 rows × 34 columns</p>\n</div>"
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(r'merged/{}_merged.csv'.format('Led rasvjeta'), parse_dates=['time_dev', 'time_prod'], encoding='latin1')\n",
+    "df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-12T22:00:55.165492200Z",
+     "start_time": "2024-03-12T22:00:54.973886200Z"
+    }
+   },
+   "id": "4bb50b95b78b4c1c"
   },
   {
    "cell_type": "markdown",
